Add unified buffer, streaming skewer, and top-level integration
- unified_buffer: Dual-port SRAM with packed BUFFER_WIDTH interface
  - Write on negedge, read on posedge for timing hygiene
  - Supports  initialization for simulation
  - Verified with cocotb testbench (4 tests passing)

- streaming_skewer: Row-based delay chain for systolic timing
  - Row i gets i+1 pipeline stages
  - Single enable signal for flow control

- tinynpu_top: Structural integration of datapath
  - Buffer → Unpack → Dual Skewers → Systolic Array
  - All control signals exposed externally (no FSM yet)

- Updated defines.sv with BUFFER_WIDTH, BUFFER_DEPTH params
- Removed old control_unit.sv (will redesign with valid signals)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 docs/sv_guide.pdf
 docs/project-description.pdf
+verification/cocotb/results.xml
+verification/cocotb/__pycache__
+verification/cocotb/sim_build
+.nvim/
