feat: Add first/last markers for pipeline state orchestration
- Add first_in/first_out and last_in/last_out signals to streaming_skewer
  - first_out pulses when row 0 data exits (marks start of computation)
  - last_out pulses when row 3 data exits (marks end of data loading)

- Wire markers through unified_buffer (1-cycle delay matching data)

- Update tinynpu_top to expose marker signals for external control:
  - input_first_out, input_last_out (for input matrix A)
  - weight_first_out, weight_last_out (for weight matrix B)

- Add verification tests:
  - test_valid_chain.py: Skewer-level marker propagation test
  - test_top_markers.py: Full pipeline integration test
  - Verified markers only trigger for marked data, not garbage

--- a/verification/cocotb/Makefile.skewer
+++ b/verification/cocotb/Makefile.skewer
@@ -1,26 +1,23 @@
-# Makefile for CocoTB simulation
+# Makefile for skewer + systolic array test
 
-# Default simulator
 SIM ?= icarus
-
-# Toplevel RTL module
 TOPLEVEL_LANG ?= verilog
 
 # RTL source files
 VERILOG_SOURCES = $(PWD)/../../rtl/defines.sv
 VERILOG_SOURCES += $(PWD)/../../rtl/pe.sv
+VERILOG_SOURCES += $(PWD)/../../rtl/systolic_array.sv
+VERILOG_SOURCES += $(PWD)/../../rtl/skewer.sv
+VERILOG_SOURCES += $(PWD)/skewer_array_tb.sv
 
-# Toplevel module for PE test
-TOPLEVEL = pe
+# Toplevel module
+TOPLEVEL = skewer_array_tb
 
-# Python test module
-MODULE = test_pe
+# Python test module  
+COCOTB_TEST_MODULES = test_skewer
 
 # Include paths
 COMPILE_ARGS += -g2012 -I$(PWD)/../../rtl
-
-# Enable waveform dumping (use SIM_ARGS for vvp runtime arguments)
-SIM_ARGS += -lx2
 
 # Include CocoTB makefiles
 include $(shell cocotb-config --makefiles)/Makefile.sim
