--- a/verification/cocotb/Makefile.systolic
+++ b/verification/cocotb/Makefile.systolic
@@ -1,4 +1,4 @@
-# Makefile for CocoTB simulation
+# Makefile for systolic array CocoTB simulation
 
 # Default simulator
 SIM ?= icarus
@@ -9,18 +9,24 @@ TOPLEVEL_LANG ?= verilog
 # RTL source files
 VERILOG_SOURCES = $(PWD)/../../rtl/defines.sv
 VERILOG_SOURCES += $(PWD)/../../rtl/pe.sv
+VERILOG_SOURCES += $(PWD)/../../rtl/systolic_array.sv
 
-# Toplevel module for PE test
-TOPLEVEL = pe
+# Toplevel module for systolic array test
+TOPLEVEL = systolic_array
 
 # Python test module
-MODULE = test_pe
+MODULE = test_numeric
 
 # Include paths
-COMPILE_ARGS += -g2012 -I$(PWD)/../../rtl
+ifeq ($(SIM),verilator)
+    COMPILE_ARGS += -I$(PWD)/../../rtl -Wno-fatal --hierarchical
+else
+    COMPILE_ARGS += -g2012 -I$(PWD)/../../rtl
+endif
 
 # Enable waveform dumping (use SIM_ARGS for vvp runtime arguments)
 SIM_ARGS += -lx2
 
 # Include CocoTB makefiles
 include $(shell cocotb-config --makefiles)/Makefile.sim
+print-%: ; @echo $*=$2$($*)
