Add tiled matrix multiplication support
- Implement tiled matmul for large matrices (13×17 × 17×24)
- Add gen_tiled_test.py to generate tiled test data
- Add test_tiled_matmul.py testbench with K-tile accumulation
- Add Makefile.tiled for Verilator simulation
- Fix data layout: A tiles use columns, B tiles use rows
- Archive old isolated component tests to cocotb/archive/
- Update .gitignore for generated test files
- All 24 output tiles verified against NumPy golden reference

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 docs/sv_guide.pdf
 docs/project-description.pdf
+docs/tiled_matmul.md
 verification/cocotb/results.xml
 verification/cocotb/__pycache__
 verification/cocotb/sim_build
+verification/cocotb/buffer_init_tiled.hex
+verification/cocotb/buffer_init_tiled_metadata.json
+verification/cocotb/buffer_init_4x4.hex
+verification/cocotb/buffer_init_4x4_metadata.json
+verification/cocotb/dump.vcd
 .nvim/
